--- a/dna-concentration.html
+++ b/dna-concentration.html
@@ -287,9 +287,48 @@
 <body>
 
 <a class="skip-link" href="#main">Skip to main content</a>
+
+<header class="bg-white shadow-sm sticky top-0 z-40">
+  <nav class="mx-auto flex w-full max-w-6xl flex-col gap-4 px-4 py-4 md:flex-row md:items-center md:justify-between">
+    <div class="flex items-center justify-between w-full md:w-auto">
+      <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+      <button id="mobile-menu-toggle" class="md:hidden p-2 text-slate-600" type="button" aria-label="Toggle menu">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
+      </button>
+    </div>
+    <div class="hidden md:block flex-1 md:px-6">
+      <div class="relative max-w-xl mx-auto md:mx-0">
+        <input id="search-input" type="search" placeholder="Search for a calculator..." autocomplete="off"
+               class="w-full rounded-full border border-gray-300 py-2 pr-11 pl-4 focus:border-blue-500 focus:ring-2 focus:ring-blue-200"/>
+        <svg class="absolute right-4 top-1/2 h-5 w-5 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+        </svg>
+        <div id="search-results" class="hidden absolute top-full left-0 right-0 z-30 mt-2 max-h-96 overflow-y-auto rounded-xl border border-gray-200 bg-white shadow-xl"></div>
+      </div>
+    </div>
+    <div id="mobile-menu" class="hidden flex-col gap-2 md:hidden">
+      <a href="search.html" class="block rounded-lg px-3 py-2 text-slate-700 hover:bg-blue-50 hover:text-blue-700">Advanced Search</a>
+      <a href="science.html#categories" class="block rounded-lg px-3 py-2 text-slate-700 hover:bg-blue-50 hover:text-blue-700">Categories</a>
+    </div>
+    <div class="hidden md:flex items-center gap-6 text-sm">
+      <a href="search.html" class="text-slate-700 hover:text-blue-600">Advanced Search</a>
+      <a href="science.html#categories" class="text-slate-700 hover:text-blue-600">Categories</a>
+    </div>
+  </nav>
+</header>
+
 <h1 id="page-title">DNA Concentration Calculator</h1>
 <p class="container">Calculate DNA (and other nucleic acid) concentration from A260 absorbance using the Beer–Lambert law. Ideal for molecular biology labs, sequencing prep, cloning, and qPCR workflows. Get precise mass concentration (ng/µL), molarity (nM), copies per µL, and purity ratios with full WCAG-accessible controls.</p>
 <main class="container" id="main" role="main">
+<nav class="text-sm text-slate-600 mb-4" aria-label="Breadcrumb">
+  <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+  <a href="science.html" class="hover:text-blue-600">Science</a> &raquo;
+  <a href="science.html#biology" class="hover:text-blue-600">Biology &amp; Genetics</a> &raquo;
+  <span class="text-slate-900 font-medium">DNA Concentration Calculator</span>
+</nav>
+
 <div aria-live="off" class="layout">
 <section aria-labelledby="calc-heading" class="card">
 <h2 id="calc-heading">Interactive calculator</h2>
@@ -903,6 +942,13 @@
       }catch(e){}
     })();
   </script>
+  <script>
+    document.getElementById('mobile-menu-toggle')?.addEventListener('click', ()=>{
+      document.getElementById('mobile-menu')?.classList.toggle('hidden');
+    });
+  </script>
+  <script defer src="/assets/js/mobile-menu.js"></script>
+  <script defer src="/assets/js/page-enhancements.js"></script>
 
-
-</body></html>
+</body>
+</html>
