--- a/subcategories/biology.html
+++ b/subcategories/biology.html
@@ -221,8 +221,7 @@
                             <li><a href="https://calcdomain.com/science.html" class="text-blue-600 hover:underline">Science Calculators</a></li>
                             <li><a href="https://calcdomain.com/health-fitness.html" class="text-blue-600 hover:underline">Health & Fitness</a></li>
                             <li><a href="https://calcdomain.com/math-conversions.html" class="text-blue-600 hover:underline">Math & Conversions</a></li>
-                            <li><a href="https://calcdomain.com/chemistry.html" class="text-blue-600 hover:underline">Chemistry Tools</a></li>
-                        </ul>
+                            <li><a href="https://calcdomain.com/subcategories/chemistry.html" class="text-blue-600 hover:underline">Chemistry Tools</a></li>
                     </div>
                 </div>
             </aside>
