--- a/sito_modificato/sequence-calculator.html
+++ b/sito_modificato/sequence-calculator.html
@@ -88,7 +88,7 @@
         "@type": "ListItem",
         "position": 3,
         "name": "Algebra",
-        "item": "https://calcdomain.com/algebra"
+        "item": "https://calcdomain.com/subcategories/core-math-algebra"
       }
     ]
   },
@@ -219,7 +219,7 @@
       
       <!-- BREADCRUMB DINAMICHE -->
       <nav id="breadcrumb-container" class="text-sm mb-4 text-gray-600">
-        <a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> &raquo; <a href="https://calcdomain.com/math-conversions" class="hover:text-blue-600">Math & Conversions</a> &raquo; <a href="https://calcdomain.com/algebra" class="hover:text-blue-600">Algebra</a> &raquo; <span>Sequence Calculator</span>
+        <a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> &raquo; <a href="https://calcdomain.com/math-conversions" class="hover:text-blue-600">Math & Conversions</a> &raquo; <a href="https://calcdomain.com/subcategories/core-math-algebra" class="hover:text-blue-600">Algebra</a> &raquo; <span>Sequence Calculator</span>
       </nav>
       
       <!-- LAYOUT A 2 COLONNE -->
