--- a/sito_modificato/subcategories/biology.html
+++ b/sito_modificato/subcategories/biology.html
@@ -94,7 +94,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">DNA → Protein Translator</h3>
+                                    <h3 class="font-semibold text-gray-800">DNA → protein translator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Convert DNA or RNA sequences into amino acid chains with codon table annotations.</p>
                                 </div>
                             </a>
@@ -103,7 +103,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">DNA Concentration Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">DNA concentration calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Normalize A260 readings to ng/µL, molarity, and copy number with dilution options.</p>
                                 </div>
                             </a>
@@ -112,7 +112,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Hemocytometer Counter</h3>
+                                    <h3 class="font-semibold text-gray-800">Hemocytometer counter</h3>
                                     <p class="text-sm text-gray-600 mt-1">Convert grid counts into cells per mL with dilution factors and viability tracking.</p>
                                 </div>
                             </a>
@@ -121,7 +121,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Cell Doubling Time</h3>
+                                    <h3 class="font-semibold text-gray-800">Cell doubling time</h3>
                                     <p class="text-sm text-gray-600 mt-1">Estimate population doubling for exponential growth or decay phases.</p>
                                 </div>
                             </a>
@@ -130,7 +130,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Bacterial Growth Curve</h3>
+                                    <h3 class="font-semibold text-gray-800">Bacterial growth curve</h3>
                                     <p class="text-sm text-gray-600 mt-1">Model lag, exponential, stationary, and death phases using OD or cell counts.</p>
                                 </div>
                             </a>
@@ -139,7 +139,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Allele Frequency Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Allele frequency calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Track allele and genotype frequencies with Hardy–Weinberg and selection options.</p>
                                 </div>
                             </a>
@@ -148,7 +148,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Hardy–Weinberg Equilibrium</h3>
+                                    <h3 class="font-semibold text-gray-800">Hardy–weinberg equilibrium</h3>
                                     <p class="text-sm text-gray-600 mt-1">Evaluate equilibrium assumptions, chi-square tests, and allele shifts.</p>
                                 </div>
                             </a>
@@ -157,7 +157,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Punnett Square Generator</h3>
+                                    <h3 class="font-semibold text-gray-800">Punnett square generator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Visualize monohybrid or dihybrid crosses with genotype and phenotype ratios.</p>
                                 </div>
                             </a>
@@ -166,7 +166,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Restriction Digest Planner</h3>
+                                    <h3 class="font-semibold text-gray-800">Restriction digest planner</h3>
                                     <p class="text-sm text-gray-600 mt-1">Design single or double digests with enzyme compatibility and fragment prediction.</p>
                                 </div>
                             </a>
@@ -175,7 +175,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Michaelis–Menten Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Michaelis–menten calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Fit enzyme kinetics, Km, Vmax, and Lineweaver–Burk transformations.</p>
                                 </div>
                             </a>
@@ -184,7 +184,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Lotka–Volterra Simulator</h3>
+                                    <h3 class="font-semibold text-gray-800">Lotka–volterra simulator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Explore predator–prey population dynamics with adjustable interaction rates.</p>
                                 </div>
                             </a>
@@ -193,7 +193,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Island Biogeography</h3>
+                                    <h3 class="font-semibold text-gray-800">Island biogeography</h3>
                                     <p class="text-sm text-gray-600 mt-1">Estimate equilibrium species richness from colonization and extinction rates.</p>
                                 </div>
                             </a>
@@ -202,7 +202,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Niche Breadth Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Niche breadth calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Measure ecological niche width using Levin’s or Shannon diversity indices.</p>
                                 </div>
                             </a>
@@ -211,7 +211,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Population Pyramid Generator</h3>
+                                    <h3 class="font-semibold text-gray-800">Population pyramid generator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Create age–sex demographic charts from raw counts or normalized proportions.</p>
                                 </div>
                             </a>
@@ -220,7 +220,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Life Table Calculator</h3>
+                                    <h3 class="font-semibold text-gray-800">Life table calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Compute survivorship (lx), mortality (qx), and life expectancy (ex) metrics.</p>
                                 </div>
                             </a>
@@ -229,7 +229,7 @@
                                     <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Fick's Law Diffusion</h3>
+                                    <h3 class="font-semibold text-gray-800">Fick's law diffusion</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate flux through membranes using concentration gradients and diffusion areas.</p>
                                 </div>
                             </a>
@@ -247,7 +247,7 @@
 
                     <!-- Related Categories -->
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="font-bold text-lg mb-4">Related Categories</h3>
+                        <h3 class="font-bold text-lg mb-4">Related categories</h3>
                         <ul class="space-y-3">
                             <li><a href="https://calcdomain.com/science" class="text-blue-600 hover:underline">Science Calculators</a></li>
                             <li><a href="https://calcdomain.com/health-fitness" class="text-blue-600 hover:underline">Health & Fitness</a></li>
@@ -265,7 +265,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+                    <h3 class="text-2xl font-bold mb-4">Calcdomain</h3>
                     <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter">
@@ -299,10 +299,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="about" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+                        <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                        <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
                         <li><a href="sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
                     </ul>
                 </div>
