--- a/sito_modificato/geometric-sequence.html
+++ b/sito_modificato/geometric-sequence.html
@@ -1,250 +1,227 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<link rel="canonical" href="https://calcdomain.com/geometric-sequence">
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <title>Geometric Sequence Calculator – Terms, nth Term & Sum of Series</title>
+  <meta name="description" content="Geometric sequence calculator: compute terms, nth term and partial sums. Solve for the first term, ratio, index or nth term, and check convergence of geometric series with clear formulas and step-by-step logic." />
+  <link rel="canonical" href="https://calcdomain.com/geometric-sequence" />
 
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
+  <style>
+    body { font-family: 'Inter', sans-serif; }
+    .card-hover {
+      transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    }
+    .card-hover:hover {
+      transform: translateY(-5px);
+      box-shadow:
+        0 10px 15px -3px rgba(0,0,0,0.1),
+        0 4px 6px -2px rgba(0,0,0,0.05);
+    }
+    .prose { max-width: 65ch; margin-left: auto; margin-right: auto; }
+    .prose h2 { font-size: 1.5rem; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; }
+    .prose h3 { font-size: 1.25rem; font-weight: 600; margin-top: 1.5rem; margin-bottom: 0.5rem; }
+    .prose p { margin-bottom: 1rem; line-height: 1.6; }
+    .prose ul, .prose ol { margin-left: 1.5rem; margin-bottom: 1rem; }
+    .prose li { margin-bottom: 0.5rem; }
+    .formula-box {
+      background: #f3f4f6;
+      border: 1px solid #d1d5db;
+      border-radius: 8px;
+      padding: 1rem;
+      overflow-x: auto;
+      margin: 1rem 0;
+    }
+    .muted-note {
+      font-size: 0.75rem;
+      color: #6b7280;
+    }
+    .pill-badge {
+      display: inline-flex;
+      align-items: center;
+      padding: 0.2rem 0.6rem;
+      border-radius: 9999px;
+      font-size: 0.7rem;
+      font-weight: 500;
+      background-color: #eff6ff;
+      color: #1d4ed8;
+    }
+    .chip {
+      display: inline-flex;
+      align-items: center;
+      border-radius: 9999px;
+      border: 1px solid #e5e7eb;
+      padding: 0.15rem 0.6rem;
+      font-size: 0.7rem;
+      color: #4b5563;
+      background-color: #f9fafb;
+      margin-right: 0.25rem;
+      margin-bottom: 0.25rem;
+    }
+    .kbd {
+      display: inline-block;
+      padding: 0.1rem 0.3rem;
+      border-radius: 0.25rem;
+      border: 1px solid #d1d5db;
+      background-color: #f9fafb;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size: 0.7rem;
+      color: #4b5563;
+    }
+    .badge-flag {
+      display: inline-flex;
+      align-items: center;
+      border-radius: 9999px;
+      padding: 0.1rem 0.5rem;
+      font-size: 0.7rem;
+      font-weight: 500;
+      background-color: #ecfdf3;
+      color: #166534;
+    }
+    .result-label {
+      font-size: 0.8rem;
+      font-weight: 600;
+      color: #374151;
+    }
+    .result-value {
+      font-size: 0.9rem;
+      font-weight: 600;
+      color: #111827;
+    }
+    .result-mono {
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    }
+  </style>
 
- 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Geometric Sequence Calculator</title>
-<meta content="Calculate geometric sequences with precision using our interactive geometric sequence calculator." name="description"/>
-<meta content="Ugo Candido" name="author"/>
-
-<link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
-<link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
-<meta content="#333333" name="theme-color"/>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
-<style>
-        body {
-            font-family: 'Inter', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa;
-            color: #212529;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 1rem;
-        }
-        h1, h2 {
-            color: #005a9c;
-        }
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
-        h2 {
-            font-size: 1.5rem;
-            margin-top: 2rem;
-        }
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-        label {
-            display: block;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-        }
-        input[type="number"] {
-            width: 100%;
-            padding: 0.75rem;
-            border: 1px solid #dee2e6;
-            border-radius: 6px;
-            font-size: 1rem;
-        }
-        .calculator-container {
-            background-color: #ffffff;
-            border: 1px solid #dee2e6;
-            border-radius: 8px;
-            padding: 2rem;
-            margin-top: 1rem;
-        }
-        .results-container {
-            margin-top: 2rem;
-            padding: 1.5rem;
-            background: #e9ecef;
-            border-radius: 8px;
-            border: 1px solid #dee2e6;
-            min-height: 220px;
-        }
-        .result-item {
-            display: flex;
-            justify-content: space-between;
-            padding: 0.75rem 0;
-            border-bottom: 1px solid #dee2e6;
-        }
-        .result-item:last-child {
-            border-bottom: none;
-        }
-        .result-label {
-            color: #6c757d;
-        }
-        .result-value {
-            font-weight: 700;
-            font-size: 1.25rem;
-            color: #28a745;
-        }
-        .content-container h2 {
-            margin-top: 2rem;
-            border-bottom: 1px solid #dee2e6;
-            padding-bottom: 0.5rem;
-        }
-        .formula-box {
-            background-color: #e9ecef;
-            padding: 1.5rem;
-            border-radius: 6px;
-            margin: 1rem 0;
-            font-size: 1.2rem;
-            text-align: center;
-            overflow-x: auto;
-        }
-        .error-message {
-            color: #dc3545;
-            font-size: 0.875rem;
-            margin-top: 0.25rem;
-        }
-    </style>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "Geometric Sequence Calculator",
-  "description": "Calculate geometric sequences with precision using our interactive geometric sequence calculator.",
-  "url": "https://calcdomain.com/geometric-sequence",
-  "author": {
-    "@type": "Person",
-    "name": "Ugo Candido"
-  },
-  "publisher": {
-    "@type": "Organization",
-    "name": "Omni Calculator"
-  }
-}
+  <!-- HEAD_SCRIPTS_E_META -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7MB5V1LZRN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-7MB5V1LZRN');
   </script>
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
-<script>
-  window.MathJax = {
-    tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['$','$'], ['\[','\]']]
-    },
-    svg: { fontCache: 'global' }
-  };
-</script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
 
+  <meta name="google-site-verification" content="_tiTZ9ivAdtXcAS9CMnTNJ549Sg39WVqP_ZFbWgglNA" />
+
+  <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
+  <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
+
+  <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
+  <script>
+    window.ezstandalone = window.ezstandalone || {};
+    ezstandalone.cmd = ezstandalone.cmd || [];
+  </script>
+
+  <script type="application/ld+json">
+[
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://calcdomain.com"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Math & Conversions",
+        "item": "https://calcdomain.com/categories/math-conversions"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Core Math & Algebra",
+        "item": "https://calcdomain.com/subcategories/core-math-algebra"
+      },
+      {
+        "@type": "ListItem",
+        "position": 4,
+        "name": "Geometric sequence",
+        "item": "https://calcdomain.com/geometric-sequence"
+      }
+    ]
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is a geometric sequence?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "A geometric sequence (or geometric progression) is a sequence of numbers where each term is obtained by multiplying the previous term by a constant called the common ratio r. If the first term is a1, then the nth term is given by an = a1 · r^(n−1)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What does this geometric sequence calculator do?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "This calculator generates terms of a geometric sequence, finds the nth term, computes the sum of the first n terms, checks convergence, and can solve for an unknown among first term, common ratio, index n or nth term using the standard geometric progression formulas."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you find the nth term of a geometric sequence?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "If a1 is the first term and r is the common ratio, the nth term is an = a1 · r^(n−1). For example, for a1 = 3 and r = 2, the 5th term is a5 = 3 · 2^(5−1) = 3 · 16 = 48."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is the formula for the sum of a geometric sequence?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "For a geometric sequence with first term a1, common ratio r and n terms, the finite sum is Sn = a1 · (1 − r^n) / (1 − r) when r ≠ 1. If r = 1, then Sn = n · a1. When |r| < 1 and n tends to infinity, the infinite sum is S∞ = a1 / (1 − r)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "When does a geometric series converge?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "A geometric series converges to a finite value only if the absolute value of the common ratio is strictly less than 1, that is |r| < 1. In this case, the infinite sum is S∞ = a1 / (1 − r). If |r| ≥ 1, the partial sums grow without bound in magnitude or oscillate and there is no finite limit."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is the difference between arithmetic and geometric sequences?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "In an arithmetic sequence each term is obtained by adding a constant difference d to the previous term, whereas in a geometric sequence each term is obtained by multiplying the previous term by a constant ratio r. The general term of an arithmetic sequence is an = a1 + (n−1)d, while for a geometric sequence it is an = a1 · r^(n−1)."
+        }
+      }
+    ]
+  }
+]
+  </script>
 </head>
-<body>
 
-<main class="container">
-<h1>Geometric Sequence Calculator</h1>
-<p>This calculator helps you determine the terms of a geometric sequence given its first term, common ratio, and the number of terms. Whether you're a student, teacher, or math enthusiast, this tool simplifies the process of calculating geometric sequences.</p>
-<section aria-labelledby="calculator-heading" class="calculator-container">
-<h2 id="calculator-heading">Calculator</h2>
-<div class="form-group">
-<label for="first-term">First Term (a<sub>1</sub>) *</label>
-<input aria-describedby="first-term-error" aria-required="true" id="first-term" type="number"/>
-<div aria-live="polite" class="error-message" id="first-term-error" role="alert"></div>
-</div>
-<div class="form-group">
-<label for="common-ratio">Common Ratio (r) *</label>
-<input aria-describedby="common-ratio-error" aria-required="true" id="common-ratio" type="number"/>
-<div aria-live="polite" class="error-message" id="common-ratio-error" role="alert"></div>
-</div>
-<div class="form-group">
-<label for="number-of-terms">Number of Terms (n) *</label>
-<input aria-describedby="number-of-terms-error" aria-required="true" id="number-of-terms" type="number"/>
-<div aria-live="polite" class="error-message" id="number-of-terms-error" role="alert"></div>
-</div>
-<button id="calculate-button" type="button">Calculate</button>
-</section>
-<section aria-labelledby="results-heading" class="results-container">
-<h2 id="results-heading">Results</h2>
-<div class="result-item">
-<span class="result-label">Nth Term (a<sub>n</sub>)</span>
-<span class="result-value" id="nth-term-value">N/A</span>
-</div>
-<div class="result-item">
-<span class="result-label">Sum of First n Terms (S<sub>n</sub>)</span>
-<span class="result-value" id="sum-terms-value">N/A</span>
-</div>
-</section>
-<section class="content-container">
-<h2>Data Source and Methodology</h2>
-<p>This calculator uses the standard formulas for geometric sequences. All calculations are based on these formulas and data.</p>
-<h2>The Formula Explained</h2>
-<div class="formula-box">
-<p><strong>Nth Term Formula:</strong> <code>a<sub>n</sub> = a<sub>1</sub> * r<sup>n-1</sup></code></p>
-<p style="margin-top: 1rem;"><strong>Sum Formula:</strong> <code>S<sub>n</sub> = a<sub>1</sub> * (1 - r<sup>n</sup>) / (1 - r)</code> if <code>r ≠ 1</code></p>
-</div>
-<h2>Glossary of Variables</h2>
-<ul>
-<li><strong>a<sub>1</sub>:</strong> First term of the sequence.</li>
-<li><strong>r:</strong> Common ratio.</li>
-<li><strong>n:</strong> Number of terms.</li>
-<li><strong>a<sub>n</sub>:</strong> Nth term of the sequence.</li>
-<li><strong>S<sub>n</sub>:</strong> Sum of the first n terms.</li>
-</ul>
-<h2>How It Works: A Step-by-Step Example</h2>
-<p>Suppose you have a sequence where the first term a<sub>1</sub> is 3, the common ratio r is 2, and you want to find the 5th term. Using the Nth term formula, you'd calculate a<sub>5</sub> = 3 * 2<sup>4</sup> = 48.</p>
-<h2>Frequently Asked Questions (FAQ)</h2>
-<div>
-<h3>What is a geometric sequence?</h3>
-<p>A geometric sequence is a series of numbers where each term after the first is found by multiplying the previous one by a fixed, non-zero number called the common ratio.</p>
-<h3>How do I find the common ratio?</h3>
-<p>The common ratio is found by dividing any term in the sequence by the previous term.</p>
-<h3>What happens if the common ratio is 1?</h3>
-<p>If the common ratio is 1, the sequence is not geometric as all terms are the same.</p>
-<h3>Can the common ratio be negative?</h3>
-<p>Yes, the common ratio can be negative, which results in the sequence alternating in sign.</p>
-<h3>How is the sum of the sequence calculated?</h3>
-<p>The sum of the first n terms of a geometric sequence is calculated using the formula S<sub>n</sub> = a<sub>1</sub> * (1 - r<sup>n</sup>) / (1 - r).</p>
-</div>
-<div class="author-box">
-<p>
-                    Tool developed by <strong>Ugo Candido</strong>.
-                    <br/>
-                    Last reviewed for accuracy on: October 25, 2023.
-                </p>
-</div>
-</section>
-</main>
-<script>
-        document.getElementById('calculate-button').addEventListener('click', function() {
-            const firstTerm = parseFloat(document.getElementById('first-term').value);
-            const commonRatio = parseFloat(document.getElementById('common-ratio').value);
-            const numberOfTerms = parseInt(document.getElementById('number-of-terms').value, 10);
+<body class="bg-gray-50 text-gray-800">
+  <!-- BODY_SCRIPTS_INIZIO -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9476637732224939"
+     crossorigin="anonymous"></script>
 
-            if (!isNaN(firstTerm) && !isNaN(commonRatio) && !isNaN(numberOfTerms)) {
-                const nthTerm = firstTerm * Math.pow(commonRatio, numberOfTerms - 1);
-                const sumTerms = firstTerm * (1 - Math.pow(commonRatio, numberOfTerms)) / (1 - commonRatio);
-
-                document.getElementById('nth-term-value').textContent = nthTerm.toFixed(2);
-                document.getElementById('sum-terms-value').textContent = !isNaN(sumTerms) ? sumTerms.toFixed(2) : 'Infinity';
-            } else {
-                alert('Please enter valid numbers for all fields.');
-            }
-        });
-    </script>
-
-
-```
-
-
-</body></html>
+  <header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="container mx-auto px-4 lg:px-6 py-4" aria-label="Primary">
+      <div class="flex justify-between items-center">
+        <a href="https://calcdomain.com" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+        <div class="w-full max-w-md hidden md:block mx-8">
+          <div class="relative">
